--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -2,9 +2,9 @@
 log4j.rootLogger=ERROR
 
 # Application
-log4j.logger.es.upv.i3m.grycap.logger.GenericLogger=INFO, CONSOLE
+log4j.logger.es.upv.i3m.grycap.logger.GenericLogger=ERROR, CONSOLE
 log4j.additivity.es.upv.i3m.grycap.logger.GenericLogger=false
-log4j.logger.es.upv.i3m.grycap.logger.ImJavaApiLogger=INFO, CONSOLE
+log4j.logger.es.upv.i3m.grycap.logger.ImJavaApiLogger=ERROR, CONSOLE
 log4j.additivity.es.upv.i3m.grycap.logger.ImJavaApiLogger=false
 
 # Console appender
