Added new method to the Api client: getInfrastructureState Added new test for the method Updated the tosca file Updated library version 0.0.1 -> 0.0.2

--- a/src/test/resources/tosca/galaxy_tosca.yaml
+++ b/src/test/resources/tosca/galaxy_tosca.yaml
@@ -7,7 +7,7 @@ topology_template:
   node_templates:
 
     bowtie2_galaxy_tool:
-      type: tosca.nodes.indigo.GalaxyTool
+      type: tosca.nodes.indigo.GalaxyShedTool
       properties:
          name: bowtie2
          owner: devteam
