Change tabs for spaces in the pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -1,129 +1,131 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
- <modelVersion>4.0.0</modelVersion>
- <groupId>es.upv.i3m.grycap</groupId>
- <artifactId>im-java-api</artifactId>
- <version>0.2.1</version>
- <name>IM Java API</name>
- <description>Java client for the REST API of the IM</description>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>es.upv.i3m.grycap</groupId>
+    <artifactId>im-java-api</artifactId>
+    <version>0.2.1</version>
+    <name>IM Java API</name>
+    <description>Java client for the REST API of the IM</description>
 
- <properties>
-  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-  <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>
-  <jersey-client.version>2.22.1</jersey-client.version>
-  <junit.version>4.12</junit.version>
-  <log4j.version>1.2.17</log4j.version>
-  <java.version>7</java.version>
-  <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
- </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+        <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>
+        <jersey-client.version>2.22.1</jersey-client.version>
+        <junit.version>4.12</junit.version>
+        <log4j.version>1.2.17</log4j.version>
+        <java.version>7</java.version>
+        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
+    </properties>
 
- <dependencies>
+    <dependencies>
   <!-- Rest client -->
-  <dependency>
-   <groupId>org.glassfish.jersey.core</groupId>
-   <artifactId>jersey-client</artifactId>
-   <version>${jersey-client.version}</version>
-  </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey-client.version}</version>
+        </dependency>
   <!-- Logger -->
-  <dependency>
-   <groupId>log4j</groupId>
-   <artifactId>log4j</artifactId>
-   <version>${log4j.version}</version>
-  </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
   <!-- Test -->
-  <dependency>
-   <groupId>junit</groupId>
-   <artifactId>junit</artifactId>
-   <version>${junit.version}</version>
-   <scope>test</scope>
-  </dependency>
- </dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
- <build>
-  <plugins>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>${maven-compiler-plugin.version}</version>
-    <configuration>
-     <source>${java.version}</source>
-     <target>${java.version}</target>
-    </configuration>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-javadoc-plugin</artifactId>
-    <version>${maven-javadoc-plugin.version}</version>
-    <configuration>
-     <reportOutputDirectory>apidocs</reportOutputDirectory>
-    </configuration>
-   </plugin>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <reportOutputDirectory>apidocs</reportOutputDirectory>
+                </configuration>
+            </plugin>
    <!-- Include dependencies inside the JAR -->
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-assembly-plugin</artifactId>
-    <version>${maven-assembly-plugin.version}</version>
-    <configuration>
-     <descriptorRefs>
-      <descriptorRef>jar-with-dependencies</descriptorRef>
-     </descriptorRefs>
-    </configuration>
-    <executions>
-     <execution>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly-plugin.version}</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
      <!-- this is used for inheritance merges -->
-      <id>make-assembly</id> 
+                        <id>make-assembly</id> 
       <!-- bind to the packaging phase -->
-      <phase>package</phase> 
-      <goals>
-       <goal>single</goal>
-      </goals>
-     </execution>
-    </executions>
-   </plugin>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
    <!-- Test coverage -->
-   <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.7.5.201505241946</version>
-    <executions>
-     <execution>
-      <id>default-prepare-agent</id>
-      <goals>
-       <goal>prepare-agent</goal>
-      </goals>
-     </execution>
-     <execution>
-      <id>default-report</id>
-      <phase>prepare-package</phase>
-      <goals>
-       <goal>report</goal>
-      </goals>
-     </execution>
-     <execution>
-      <id>default-check</id>
-      <goals>
-       <goal>check</goal>
-      </goals>
-      <configuration>
-       <rules>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.5.201505241946</version>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
         <!-- implementation is needed only for Maven 2 -->
-        <rule implementation="org.jacoco.maven.RuleConfiguration">
-         <element>BUNDLE</element>
-         <limits>
+                                <rule
+                                    implementation="org.jacoco.maven.RuleConfiguration">
+                                    <element>BUNDLE</element>
+                                    <limits>
           <!-- implementation is needed only for Maven 2 -->
-          <limit implementation="org.jacoco.report.check.Limit">
-           <counter>COMPLEXITY</counter>
-           <value>COVEREDRATIO</value>
-           <minimum>0.60</minimum>
-          </limit>
-         </limits>
-        </rule>
-       </rules>
-      </configuration>
-     </execution>
-    </executions>
-   </plugin>
-  </plugins>
- </build>
+                                        <limit
+                                            implementation="org.jacoco.report.check.Limit">
+                                            <counter>COMPLEXITY</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.60</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
