--- a/src/test/resources/tosca/galaxy_tosca.yaml
+++ b/src/test/resources/tosca/galaxy_tosca.yaml
@@ -35,3 +35,8 @@ topology_template:
             type: linux 
             #distribution: scientific 
             #version: 6.6
+            
+  outputs:
+    private_ip:
+      description: The private IP address of the deployed server instance.
+      value: { get_attribute: [galaxy_server, private_address] }
