--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>es.upv.i3m.grycap</groupId>
   <artifactId>im-java-api</artifactId>
-  <version>0.2.2</version>
+  <version>0.3.0</version>
   <name>IM Java API</name>
   <description>Java client for the REST API of the IM</description>
 
@@ -12,6 +12,7 @@
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>
     <jersey-client.version>2.22.1</jersey-client.version>
+    <jackson-mapper>1.9.13</jackson-mapper>
     <junit.version>4.12</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <java.version>7</java.version>
@@ -24,6 +25,12 @@
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
       <version>${jersey-client.version}</version>
+    </dependency>
+   <!-- Jackson libraries -->
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>${jackson-mapper}</version>
     </dependency>
   <!-- Logger -->
     <dependency>
