--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>es.upv.i3m.grycap</groupId>
   <artifactId>im-java-api</artifactId>
-  <version>0.4.4</version>
+  <version>0.4.5</version>
   <name>IM Java API</name>
   <description>Java client for the REST API of the IM</description>
 
@@ -20,6 +20,7 @@
     <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
     <mockserver-netty.version>3.10.4</mockserver-netty.version>
+    <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
   </properties>
 
   <dependencies>
@@ -131,7 +132,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.5.201505241946</version>
+        <version>${jacoco-maven-plugin.version}</version>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
