--- a/src/test/resources/tosca/galaxy_tosca.yaml
+++ b/src/test/resources/tosca/galaxy_tosca.yaml
@@ -1,30 +1,15 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
-repositories:
-  indigo_repository:
-    description: INDIGO Custom types repository
-    url: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/
-
 imports:
-  - indigo_custom_types:
-      file: custom_types.yaml
-      repository: indigo_repository
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
 
 description: >
   TOSCA test for launching a Galaxy Server also configuring the bowtie2
   tool using Galaxy Tool Shed.
+
 topology_template:
  
   node_templates:
-
-    bowtie2_galaxy_tool:
-      type: tosca.nodes.indigo.GalaxyShedTool
-      properties:
-         name: bowtie2
-         owner: devteam
-         tool_panel_section_id: ngs_mapping
-      requirements:
-        - host: galaxy
 
     galaxy:
       type: tosca.nodes.indigo.GalaxyPortal
@@ -39,14 +24,19 @@ topology_template:
  
     galaxy_server:
       type: tosca.nodes.indigo.Compute
-      properties:
-         public_ip: yes
       capabilities:
+        endpoint:
+          properties:
+            network_name: PUBLIC
+            ports:
+              http_port:
+                protocol: tcp
+                source: 8080
         # Host container properties
         host:
-          properties:
-            num_cpus: 1
-            mem_size: 1 GB
+         properties:
+           num_cpus: 1
+           mem_size: 1 GB
         # Guest Operating System properties
         os:
           properties:
@@ -59,4 +49,4 @@ topology_template:
     galaxy_url:
       value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ], ':8080' ] }
     cluster_creds:
-      value: { get_attribute: [ galaxy_server, credential, 0 ] }
+      value: { get_attribute: [ galaxy_server, endpoint, credential, 0 ] }
