--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
     <mockserver-netty.version>3.10.4</mockserver-netty.version>
     <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
+    <mockito.version>2.0.70-beta</mockito.version>
   </properties>
 
   <dependencies>
@@ -66,12 +67,18 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- mockserver -->
+  <!-- Mockserver -->
     <dependency>
       <groupId>org.mock-server</groupId>
       <artifactId>mockserver-netty</artifactId>
       <version>${mockserver-netty.version}</version>
       <scope>test</scope>
+    </dependency>
+  <!-- Mockito -->    
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
     </dependency>
   </dependencies>
 
