--- a/src/test/resources/tosca/galaxy_tosca.yaml
+++ b/src/test/resources/tosca/galaxy_tosca.yaml
@@ -4,8 +4,7 @@ imports:
   - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
 
 description: >
-  TOSCA test for launching a Galaxy Server also configuring the bowtie2
-  tool using Galaxy Tool Shed.
+  TOSCA template for deploying a Galaxy Server using a local LRMS.
 
 topology_template:
  
@@ -31,7 +30,7 @@ topology_template:
             ports:
               http_port:
                 protocol: tcp
-                source: 8080
+                source: 80
         # Host container properties
         host:
          properties:
@@ -42,11 +41,11 @@ topology_template:
           properties:
             # host Operating System image properties
             type: linux 
-            #distribution: scientific 
-            #version: 6.6
+            distribution: centos 
+            version: 7
 
   outputs:
     galaxy_url:
-      value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ], ':8080' ] }
+      value: { concat: [ 'http://', get_attribute: [ galaxy_server, private_address, 0 ], '/galaxy' ] }
     cluster_creds:
       value: { get_attribute: [ galaxy_server, endpoint, credential, 0 ] }
