--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>es.upv.i3m.grycap</groupId>
   <artifactId>im-java-api</artifactId>
-  <version>0.4.12</version>
+  <version>0.4.13</version>
   <name>IM Java API</name>
   <description>Java client for the REST API of the IM</description>
 
@@ -12,7 +12,7 @@
     <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
     <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
     <jersey-client.version>2.22.2</jersey-client.version>
-    <jackson.version>2.7.3</jackson.version>
+    <jackson.version>[2.8.11.1,)</jackson.version>
     <apache-commons.version>3.4</apache-commons.version>
     <junit.version>4.12</junit.version>
     <log4j.version>1.2.17</log4j.version>
