--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
     <mockserver-netty.version>3.10.4</mockserver-netty.version>
-    <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
     <mockito.version>2.0.70-beta</mockito.version>
   </properties>
 
