--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>es.upv.i3m.grycap</groupId>
   <artifactId>im-java-api</artifactId>
-  <version>0.4.15</version>
+  <version>0.4.16</version>
   <name>IM Java API</name>
   <description>Java client for the REST API of the IM</description>
 
@@ -21,7 +21,7 @@
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
     <mockserver-netty.version>3.10.4</mockserver-netty.version>
     <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
-    <mockito.version>2.0.70-beta</mockito.version>
+    <mockito.version>2.1.0</mockito.version>
   </properties>
 
   <dependencies>
